--- a/trunk/AlgPedia/algorithm/templates/display_all_classifications.html
+++ b/trunk/AlgPedia/algorithm/templates/display_all_classifications.html
@@ -1,7 +1,48 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-	<body>
-	
-		<div id="classifications">
+<head>
+<link rel="stylesheet"
+	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
+<script
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
+	type="text/javascript"></script>
+
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>AlgPedia</title>
+<div class="alert alert-info ">
+	<h4><i class="icon-align-center"></i> AlgPedia</h4>
+</div>
+</head>
+<body>
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span2">
+				<table class="table table-condensed">
+					<tr>
+						<td><a href="http://localhost:8000/">Main Page</a></td>
+					</tr>
+					<tr>
+						<td><a href="http://localhost:8000/admin">Admin Page</a></td>
+					</tr>
+					<tr>
+						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div class="span10 pull-right">
+				<div class="form-search text-right">
+					<div class="span8 input-append well">
+						<input id="r-search" name="q" type="text" class="search-query"
+							placeholder="Pesquisa" />
+						<button class="btn btn-info" type="button">Buscar</button>
+					</div>
+				</div>
+			</div>
+			&nbsp;&nbsp;&nbsp;
+			<div class="span10 alert alert-info">
+				<div id="classifications">
 			<table id="classifications_uri">
 							
 									
@@ -15,12 +56,7 @@
 				
 			</table>
 		</div>
-		
-		<div id="links">
-			<a href="http://localhost:8000/">Main Page</a><br/>
-			<a href="http://localhost:8000/admin">Admin Page</a><br/>
-			<a href="http://localhost:8000/show/cat/all">Classifications</a><br/>
+			</div>
 		</div>
-		
-	</body>
+</body>
 </html>
