--- a/AlgPedia/algorithm/templates/display_all_classifications.html
+++ b/AlgPedia/algorithm/templates/display_all_classifications.html
@@ -31,13 +31,11 @@
 					</tr>
 				</table>
 			</div>
-			<div class="span10 pull-right">
-				<div class="form-search text-right">
-					<div class="span8 input-append well">
-						<input id="r-search" name="q" type="text" class="search-query"
-							placeholder="Pesquisa" />
-						<button class="btn btn-info" type="button">Buscar</button>
-					</div>
+			
+			<div class="control-group info span10 ">
+				<div class="input-append">
+					<input class="input-xxlarge" id="search" placeholder="Search" type="text">
+					<button class="btn btn-info" type="button">Search</button>
 				</div>
 			</div>
 			&nbsp;&nbsp;&nbsp;
