settings.py atualizado para tentar resolver o problema do banco de dados. e outras coisas também.
'changed things...'

--- a/AlgPedia/algorithm/templates/add_form.html
+++ b/AlgPedia/algorithm/templates/add_form.html
@@ -91,7 +91,7 @@
 			}
 		});
 		$("#add").click(function() {
-			alert("Esse botão não faz nada xD");
+			alert("Esse botao nao faz nada xD");
 		});
 	});
 </script>
