--- a/trunk/AlgPedia/algorithm/templates/add_form.html
+++ b/trunk/AlgPedia/algorithm/templates/add_form.html
@@ -91,7 +91,7 @@
 			}
 		});
 		$("#add").click(function() {
-			alert("Esse botão não faz nada xD");
+			alert("Esse botao nao faz nada xD");
 		});
 	});
 </script>
