Já populamos a base com classificações e algoritmos. Falta fazer a restrição dos algoritmos e também inserir as linguagens e as implementações.
O resto é a nível de vista.

'Committing in accordance with the prophecy.'

--- a/AlgPedia/algorithm/templates/display_classification.html
+++ b/AlgPedia/algorithm/templates/display_classification.html
@@ -47,6 +47,13 @@
 			
 			<!-- table containing algorithms with such classification -->
 			<table id="algorithms">
+				{% for alg in algorithms %}
+				<tr>
+						<td><a href="{{alg.link}}"> {{ alg.name }} </td>
+					</tr>
+				{% empty %}
+					<p> There are no Algorithms with this Classification. </p>
+				{% endfor %}
 			</table>
 		</div>
 			</div>
