--- a/AlgPedia/algorithm/templates/default_debug.html
+++ b/AlgPedia/algorithm/templates/default_debug.html
@@ -41,7 +41,7 @@
 			&nbsp;&nbsp;&nbsp;
 			<div class="span10 alert alert-info">
 				<div>
-					<h4>{{ classif.name }}</h4>
+					<h4>{{ message }}</h4>
 				</div>
 				&nbsp;&nbsp;&nbsp;
 				<div>
