--- a/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -33,6 +33,10 @@
 						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
 						</td>
 					</tr>
+					<tr>
+						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 
@@ -47,6 +51,7 @@
 			<div class="span10 alert alert-info">
 			<h4><a href="{{ classification_algp_url }}"
 							target="_blank">{{algorithm_classification }}</a></h4>
+				<a href="{{ classification_dbp_url }}" target="_blank"> [More Information] </a>
 				<div id="classification">
 					<p>
 						For more information click <a href="{{ classification_dbp_url }}"
@@ -63,6 +68,22 @@
 						<td>{{algorithm_about}}</td>
 					</tr>				
 			</table >
+			
+			<table id="implementations-table" class="table table-hover well">
+				 {% for implementation in implementations %}
+					<tr>
+						<td>{{ implementation.programming_language }}</td>
+						<td>
+							<textarea readonly style="width: 810px; height: 200px">
+								{{ implementation.code }}
+							</textarea>
+						</td>
+					</tr>
+				{% empty %}
+				{% endfor %}			
+			</table >
+			
+			
 			</div>
 		</div>
 </body>
