--- a/AlgPedia/algorithm/templates/add_form.html
+++ b/AlgPedia/algorithm/templates/add_form.html
@@ -38,6 +38,10 @@
 						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
 						</td>
 					</tr>
+					<tr>
+						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 			<div class="control-group info span10 ">
