--- a/AlgPedia/algorithm/templates/display_all_classifications.html
+++ b/AlgPedia/algorithm/templates/display_all_classifications.html
@@ -29,6 +29,10 @@
 						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
 						</td>
 					</tr>
+					<tr>
+						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 			
