Já é possivel criar um algoritmo a partir da pagina da categoria. Falta criar as tela de criar implementacao e colocar um botao de 'adicionar implementacao' na pagina de listar algoritmo. 'Some shit.'

--- a/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -49,26 +49,21 @@
 			</div>
 			&nbsp;&nbsp;&nbsp;
 			<div class="span10 alert alert-info">
-			<h4><a href="{{ classification_algp_url }}"
-							target="_blank">{{algorithm_classification }}</a></h4>
-				<a href="{{ classification_dbp_url }}" target="_blank"> [More Information] </a>
+			<h3><a href="{{ classification_algp_url }}"	target="_blank">{{algorithm_classification }}</a></h3>
 				<div id="classification">
-					<p>
-						For more information click <a href="{{ classification_dbp_url }}"
-							target="_blank">here</a>
-					</p>
-				</div>
+					<a href="{{ classification_dbp_url }}" target="_blank"> [More Information] </a>
+				</div> <br/>
 			<table class="table table-hover well">
 				 <thead>
 					<tr>
-						<td>{{algorithm_name}}</td>
+						<td><h4>{{algorithm_name}}</h4></td>
 					</tr>
 				 </thead>
 					<tr>
 						<td>{{algorithm_about}}</td>
 					</tr>				
 			</table >
-			
+			<label class="control-label" for="inputName"> Implementations :</label>
 			<table id="implementations-table" class="table table-hover well">
 				 {% for implementation in implementations %}
 					<tr>
@@ -80,6 +75,9 @@
 						</td>
 					</tr>
 				{% empty %}
+					<tr>
+						<td> There are no implementations available for this algorithm yet. </td>
+					</tr>
 				{% endfor %}			
 			</table >
 			
