--- a/AlgPedia/algorithm/templates/add_form.html
+++ b/AlgPedia/algorithm/templates/add_form.html
@@ -8,10 +8,14 @@
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
 	type="text/javascript"></script>
 <link rel="stylesheet"
-	href="./algorithm/static/css/bootstrap-wysihtml5.css" />
-<script
-	src="./algorithm/static/js/bootstrap-wysihtml5.js"
+	href="http://localhost:8000/site_media/css/bootstrap-wysihtml5.css" />
+	<script
+	src="http://localhost:8000/site_media/js/wysihtml5.js"
 	type="text/javascript"></script>
+<script
+	src="http://localhost:8000/site_media/js/bootstrap-wysihtml5.js"
+	type="text/javascript"></script>
+	
 
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>AlgPedia</title>
@@ -55,19 +59,23 @@
 				<h4>{{ classif.name }}</h4>
 				&nbsp;&nbsp;&nbsp;
 				<form class="form-horizontal">
+					<input type="hidden" name="classification_id" value="{{classif.id}}" />
 					<div class="control-group">
 						<label class="control-label" for="inputName"> Name :</label>
 						<div class="controls">
-							<input type="text" id="inputName" placeholder="Algorithm Name">
+							<input type="text" name="algorithm_name" id="inputName" placeholder="Algorithm Name">
 						</div>
 					</div>
+					
 					<div class="control-group">
 						<label class="control-label" for="inputAuthor">Author :</label>
 						<div class="controls">
-							<input type="text" id="inputAuthor">&nbsp;&nbsp;<label
-								class="checkbox inline"> <input type="checkbox"
-								id="Unknown" value=""> Unknown</label>
-						</div>
+							<input type="text" name="author_name" id="inputAuthor">&nbsp;&nbsp;
+							<label class="checkbox inline"> 
+								<input type="checkbox" id="Unknown" value=""> Unknown
+							</label>
+						</div>				
+						
 						&nbsp;&nbsp;&nbsp;
 					<div class="control-group">
 						<div class='btn-group'>
@@ -76,14 +84,13 @@
 							<a class="btn" href="#"><i class="icon-bold"></i></a>
 							<a class="btn" href="#"><i class="icon-italic"></i></a>
 						</div>
-						<label class="control-label" for="inputAlgorithm">Algorithm:</label>
+						<label class="control-label" for="inputAlgorithm">About:</label>
 						
 						<div class="controls">
-							<textarea class="textarea" style="width: 810px; height: 200px"></textarea>
+							<textarea id="algorithm_about" class="textarea" style="width: 810px; height: 200px"></textarea>
 						</div>
 					</div>
-					<button class="btn btn-large btn-block" type="button" id="add">Add
-						Algorithm</button>
+					<button class="btn btn-large btn-block" type="button" id="add">Add Algorithm</button>
 				</form>
 			</div>
 		</div>
@@ -93,10 +100,9 @@
 
 <script>
 	$(function() {
-		$('.textarea').wysihtml5();
 		$("#inputAuthor").attr("readonly", true);
 		$("#Unknown").attr("checked", true);
-		$('.textarea').wysihtml5({
+		/*$('#algorithm_about').wysihtml5({
 			"font-styles": true, //Font styling, e.g. h1, h2, etc. Default true
 			"emphasis": true, //Italics, bold, etc. Default true
 			"lists": true, //(Un)ordered lists, e.g. Bullets, Numbers. Default true
@@ -104,7 +110,7 @@
 			"link": true, //Button to insert a link. Default true
 			"image": true, //Button to insert an image. Default true,
 			"color": false //Button to change color of font  
-		});
+		});*/
 
 		$("#Unknown").click(function() {
 			if ($('#Unknown').attr('checked')) {
@@ -117,7 +123,19 @@
 			}
 		});
 		$("#add").click(function() {
-			alert("Esse botao nao faz nada xD");
+			var form = document.forms[0];
+			
+			var algorithm_author = form['author_name'].value;
+			var algorithm_about = form['algorithm_about'].value;
+			var classification_id = form['classification_id'].value;
+			var algorithm_name = form['algorithm_name'].value;
+			
+			window.location = "http://localhost:8000/added/alg/cat/"+classification_id+"/"+algorithm_name+"/"+algorithm_author+"/"+algorithm_about;
+			
+			//class_id / name / author / about
+			
+			
+			
 		});
 	});
 </script>
