--- a/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -4,13 +4,23 @@
 <head>
 <link rel="stylesheet"
 	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
-<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+	<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="http://localhost:8000/site_media/tiny_mce/tiny_mce.js"></script>
+	<script type="text/javascript">
+		$(function(){
+			$("#add_implementation").click(function(){
+				var form = document.forms[0];
+				var alg_id = form['algorithm_id'].value;
+				
+				window.location = "http://localhost:8000/add/alg/id/"+alg_id;
+			});
+		});
+	</script>
 <script>
 tinyMCE.init({
 					// General options
-					mode : "exact",
-					elements: "algorithm_about",
+					mode : "textareas",
+					//elements: "algorithm_about",
 					theme : "advanced",
 					readonly : true
 			});
@@ -60,36 +70,39 @@ tinyMCE.init({
 				<div id="classification">
 					<a href="{{ classification_dbp_url }}" target="_blank"> [More Information] </a>
 				</div> <br/>
-			<table class="table table-hover well">
-				 <thead>
-					<tr>
-						<td><h4>{{algorithm_name}}</h4></td>
-					</tr>
-				 </thead>
-				 <tr>
-					<td> <label class="control-label" for="inputName"> About :</label> </td>
-					<td>  <textarea id="algorithm_about" style="width: 810px; height: 200px">{{algorithm_about}}</textarea> </td>
-				 </tr>
-			</table >
-			<label class="control-label" for="inputName"> Implementations :</label>
-			<table id="implementations-table" class="table table-hover well">
-				 {% for implementation in implementations %}
-					<tr>
-						<td>{{ implementation.programming_language }}</td>
-						<td>
-							<textarea style="width: 810px; height: 200px">
-								{{ implementation.code }}
-							</textarea>
-						</td>
-					</tr>
-				{% empty %}
-					<tr>
-						<td> There are no implementations available for this algorithm yet. </td>
-					</tr>
-				{% endfor %}			
-			</table >
+			<form id="add_algorithm_form">
+				<input type="hidden" id="algorithm_id" value="{{algorithm_id}}" \>
+				<table class="table table-hover well">
+					 <thead>
+						<tr>
+							<td><h4>{{algorithm_name}}</h4></td>
+							<td> <input type="button" value="Add Implementation" id="add_implementation" \> </td>
+						</tr>
+					 </thead>
+					 <tr>
+						<td> <label class="control-label" for="inputName"> About :</label> </td>
+						<td>  <textarea id="algorithm_about" style="width: 810px; height: 200px">{{algorithm_about}}</textarea> </td>
+					 </tr>
+				</table >
+				<label class="control-label" for="inputName"> Implementations :</label>
+				<table id="implementations-table" class="table table-hover well">
+					 {% for implementation in implementations %}
+						<tr>
+							<td>{{ implementation.programming_language }}</td>
+							<td>
+								<textarea id="alg_implementation_{{implementation.id}}" style="width: 810px; height: 200px">
+									{{ implementation.code }}
+								</textarea>
+							</td>
+						</tr>
+					{% empty %}
+						<tr>
+							<td> There are no implementations available for this algorithm yet. </td>
+						</tr>
+					{% endfor %}			
+				</table >
 			
-			
+			</form>
 			</div>
 		</div>
 </body>
