--- a/AlgPedia/algorithm/templates/accounts/login.html
+++ b/AlgPedia/algorithm/templates/accounts/login.html
@@ -1,13 +1,18 @@
 {% extends "main_template.html" %}
 {% block content %}
-	<div class="span2"></div>
+	<div class="span3"></div>
 	<div id="login" class="span4">
 	{{message}}
-	{% if form.errors %}
-		<p>Your username and password didn't match. Please try again.</p>
-	{% endif %}
+	
 <form class="form-horizontal" method="POST" action="{% url 'django.contrib.auth.views.login' %}">
 	{% csrf_token %}
+	{% if form.errors %}
+	<div class="control-group">
+	<div class="alert alert-error alert-block text-center">
+		Your username and password didn't match. Please try again.
+	</div>
+	</div>
+	{% endif %}
 	<div class="control-group">
 		<label class="text-center">
 			If you are not an AlgPedia user - <a href="http://localhost:8000/signin">SignIn</a>
