--- a/AlgPedia/algorithm/templates/main_template.html
+++ b/AlgPedia/algorithm/templates/main_template.html
@@ -2,8 +2,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 	<head>
-		<link rel="stylesheet"	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
-		<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"	type="text/javascript"></script>
+		<!--<link rel="stylesheet"	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />-->
+		<link rel="stylesheet"	href="http://localhost:8000/site_media/css/bootstrap.css" />
+		<!--<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"	type="text/javascript"></script>-->
+		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 		<script	src="https://raw.github.com/makeusabrew/bootbox/v3.2.0/bootbox.min.js"	type="text/javascript"></script>
 		<link rel="stylesheet"	href="http://localhost:8000/site_media/css/bootstrap-wysihtml5.css" />
 		<script	src="http://localhost:8000/site_media/js/wysihtml5.js"	type="text/javascript"></script>
@@ -11,6 +14,7 @@
 		<script type="text/javascript" src="http://localhost:8000/site_media/tiny_mce/tiny_mce.js"></script>
 		<script type="text/javascript" src="http://localhost:8000/site_media/js/algpedia.js"></script>
 		<script type="text/javascript" src="http://localhost:8000/site_media/js/bootstrap.js"></script>
+		<script type="text/javascript" src="http://localhost:8000/site_media/js/overlib.js"></script>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<title>AlgPedia</title>
@@ -22,15 +26,17 @@
 	<body>
 	
 		<ul class="nav nav-tabs">
-			<li class="active"><a href="http://localhost:8000/">Home</a></li>
-			<li><a href="http://localhost:8000/admin">Admin Page</a></li>
-			<li><a href="http://localhost:8000/show/cat/all">Classifications</a></li>
-			<li><a href="http://localhost:8000/show/alg/all">Algorithms</a></li>
+			<li ><a href="http://localhost:8000/">Home</a></li>
+			<li ><a href="http://localhost:8000/admin">Admin Page</a></li>
+			<li ><a href="http://localhost:8000/show/cat/all">Classifications</a></li>
+			<li ><a href="http://localhost:8000/show/alg/all">Algorithms</a></li>
+			<li ><a href="http://localhost:8000/about">About</a></li>
+			<li ><a href="http://localhost:8000/contact">Contact</a></li>
 			{% if logged %}
-				<li><a href="http://localhost:8000/accounts/logout">Logout</a></li>
+				<li ><a href="http://localhost:8000/accounts/logout">Logout</a></li>
 				<input type="hidden" id="logged" name="loged" value="true" \>	
 			{% else %}
-				<li><a href="http://localhost:8000/accounts/login">Login</a></li>
+				<li ><a href="http://localhost:8000/accounts/login">Login</a></li>
 				<input type="hidden" id="logged" name="loged" value="false" \>	
 			{% endif %}
 		</ul>
