Adição de Algoritmo (fixed)

--- a/AlgPedia/algorithm/templates/add_algorithm.html
+++ b/AlgPedia/algorithm/templates/add_algorithm.html
@@ -17,19 +17,10 @@
 				{{form.name}}
 			</div>
 		</div>					
-		<div class="control-group">
-			<label class="control-label" for="inputAuthor">Author :</label>
-				<div class="controls">
-					{{form.author}}&nbsp;&nbsp;
-					<label class="checkbox inline"> 
-						<input type="checkbox" id="Unknown" value=""> Unknown
-					</label>
-				</div>	
-		</div>				
 		&nbsp;&nbsp;&nbsp;
 		<div class="control-group">
 			<label class="control-label" for="inputAlgorithm">About:</label>
-				<div class="controls">
+				<div class="controls mceEditable">
 					{{form.description}}
 				</div>
 		</div>
