--- a/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -12,7 +12,7 @@
 			 </tr>
 		</table >
 		
-		<label class="control-label" for="inputName"><strong>Implementations :</strong><a id="add_implementation" href="http://localhost:8000/add/alg/id/{{algorithm_id}}"><i class="icon-plus"></i> </a>
+		<label class="control-label" for="inputName"><strong>Implementations :</strong><a id="add_implementation" href="http://localhost:8000/add/alg/id/{{algorithm_id}}"><img src="http://localhost:8000/site_media/images/add-button.png" height="100%" alt="" />	</a>
 		<!--<input type="button" value="Add Implementation" id="add_implementation" ></input><i class="icon-plus"></i>-->
 		</label>
 		
@@ -28,7 +28,7 @@
 			<div class="span2"></div>
 				<div class="accordion-inner align-center">
 				
-					<textarea id="alg_implementation_{{implementation.id}}" name="alg_implementation_{{implementation.id}}" style="width: 810px; height: 200px" >
+					<textarea id="alg_implementation_{{implementation.id}}" class="prettyprint" name="alg_implementation_{{implementation.id}}" style="width: 810px; height: 200px" >
 							{{ implementation.code }}
 						</textarea>
 				</div>
