--- a/AlgPedia/algorithm/templates/display_classification.html
+++ b/AlgPedia/algorithm/templates/display_classification.html
@@ -1,12 +1,13 @@
 {% extends "main_template.html" %}
 {% block content %}
-	<h4> {{ classif.name }} </h4>
+	<label class="control-label"><strong>{{ classif.name }} </strong><a id="add_algorithm" href="http://localhost:8000/add/cat/id/{{classif.id}}"><img src="http://localhost:8000/site_media/images/add-button.png" height="100%" alt="" />	</a>
 	<div id="classification">
-		<p> For more information click <a href="{{ classif.uri }}" target="_blank">here</a> </p>
+		&nbsp;&nbsp;&nbsp;<a href="{{ classif.uri }}" target="_blank"> [More Information] </a></td>
 			<!-- table containing algorithms with such classification -->
-			<form id="add_algorithm" >
+		<form id="add_algorithm" >
 			<input type="hidden" name="classification_id" value="{{classif.id}}"/>
-			<input type="button" id="add_algorithm" value="Add Algorithm" /></br></br>				
+			<!--<input type="button" id="add_algorithm" value="Add Algorithm" /></br></br>	-->			
+			&nbsp;&nbsp;&nbsp;
 			<table id="algorithms" class="table table-striped info">
 				{% for alg in algorithms %}
 					<tr>
