--- a/AlgPedia/algorithm/templates/default_debug.html
+++ b/AlgPedia/algorithm/templates/default_debug.html
@@ -8,6 +8,7 @@
 <div class="span1"></div>
 <div class="row">
   <div class="span9">
+  <!--<img src="http://localhost:8000/site_media/images/logo_new.png"  style="border-style:solid;" alt="" />-->
  	  <h5 class="text-info text-center">
 		AlgPedia is a <strong>free collaborative </strong>encyclopedia constructed to provide an RDF-based algorithms that can be accessed via this website or through Open Linked Data applications that process structured data.</h5>
 	<div class="row">
