--- a/AlgPedia/algorithm/templates/display_all_classifications.html
+++ b/AlgPedia/algorithm/templates/display_all_classifications.html
@@ -2,7 +2,21 @@
 {% block content %}
 <div class="span1"></div>
 	<div id="classifications" class="span10">
-		<table class="table table-bordered" id="classifications_uri">									
+	
+	<table class="table table-bordered" id="classifications_uri">									
+			{% for class in user_interested_classifications %}	
+			<tr>
+				<td><a href="{{class.link}}"> {{ class.name }} </td>
+			</tr>
+				{% empty %}
+				<p> You have not indicated any interest in classification algorithm </p>
+			{% endfor %}
+		</table>
+	
+		<table class="table table-bordered" id="classifications_uri">	
+			<tr>
+				<td>Other Algorithms </td>
+			</tr>
 			{% for class in classifications %}	
 			<tr>
 				<td><a href="{{class.link}}"> {{ class.name }} </td>
